--- a/_matplotlib.qmd
+++ b/_matplotlib.qmd
@@ -1,5 +1,4 @@
-##  Matplotlib
-
+##  Matplotlib (by Catherine Cheu)
 
 The `matplotlib` library can provide methods in plotting and arranging data visually in order to help viewers understand the main concepts of the data analysis.
 In this chapter, a progression of graphs will be shown to demonstrate some of the capabilities the library has to graph and plot data.
