--- a/_plotnine.qmd
+++ b/_plotnine.qmd
@@ -1,4 +1,4 @@
-## GG-Plot with Plotnine
+## GG-Plot with `Plotnine` (by Guanghong Yi)
 
 The `plotnine` package facilitates the creation of highly-informative plots of structured data based on the R implementation of `ggplot2`. The plotnine package is built on the top of Matplotlib and interacts well with Pandas.
 
