--- a/intro.qmd
+++ b/intro.qmd
@@ -231,7 +231,7 @@ Please use the following table to sign up.
   03/20  | Noel, Luke             | Plotting on maps with `gmplot`
   03/20  | Whitney, William       | Autoencoder
   03/27  | Nguyen, Christine      | Calling R from Python and vice versa
-  03/27  | Cummins, Patrick       |
+  03/27  | Cummins, Patrick       | K-means clustering
   03/29  | Zheng, Michael         | Web Scraping with `Selenium`
   04/03  | Lunetta, Giovanni      | Softmax Regression & Neural Networks with `TensorFlow`
 
