--- a/unsupervised.qmd
+++ b/unsupervised.qmd
@@ -9,3 +9,5 @@ Unsupervised learning methods are for problems where there is no known labels
 
 {{< include _manifold.qmd >}}
 
+{{< include _gaumix.qmd >}}
+
