--- a/references.bib
+++ b/references.bib
@@ -22,3 +22,13 @@
   year={2016},
   publisher={O'Reilly Media, Inc.}
 }
+
+
+@article{chawla2002smote,
+  title={{SMOTE}: {S}ynthetic minority over-sampling technique},
+  author={Chawla, Nitesh V and Bowyer, Kevin W and Hall, Lawrence O and Kegelmeyer, W Philip},
+  journal={Journal of Artificial Intelligence Research},
+  volume={16},
+  pages={321--357},
+  year={2002}
+}
