--- a/_autoencoder.qmd
+++ b/_autoencoder.qmd
@@ -158,8 +158,8 @@ x_test_noisy = np.clip(x_test_noisy, 0., 1.)
 What the images look like currently
 ```{python}
 plt.figure(figsize=(20, 2))
-for i in range(1, 5 + 1):
-    ax = plt.subplot(1, 5, i)
+for i in range(5):
+    ax = plt.subplot(2, 5, i + 1 + 5)
     plt.imshow(x_test_noisy[i].reshape(28, 28))
     plt.gray()
     ax.get_xaxis().set_visible(False)
@@ -195,6 +195,12 @@ model.add(Conv2D(1,3,activation='sigmoid', padding= 'same')) # output layer
 
 model.compile(optimizer= 'adam', loss = 'binary_crossentropy')
 model.summary()
+
+xtn = x_train_noisy.reshape(60000, 28, 28 ,1)
+xt  = x_train.reshape(60000, 28, 28 ,1)
+xsn = x_test_noisy.reshape(10000, 28, 28, 1)
+xs  = x_test.reshape(10000, 28, 28, 1)
+
 model.fit(x_train_noisy, x_train,
           epochs=15,
           batch_size=128,
